--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dat.gui": "^0.7.7",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
@@ -21,6 +22,8 @@
   },
   "dependencies": {
     "@types/three": "^0.131.1",
+    "cannon-es": "^0.19.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.132.2"
   }
 }
